crates/reap-okx-live-adapter/tests/ui/roles_no_raw_authority.stderr
error[E0277]: the trait bound `OrderCommandWebsocketLifecycle: Clone` is not satisfied
  --> tests/ui/roles_no_raw_authority.rs:10:21
   |
10 |     require_clone::<OrderCommandWebsocketLifecycle>();
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `OrderCommandWebsocketLifecycle`
   |
note: required by a bound in `require_clone`
  --> tests/ui/roles_no_raw_authority.rs:7:21
   |
 7 | fn require_clone<T: Clone>() {}
   |                     ^^^^^ required by this bound in `require_clone`

error[E0599]: no method named `execution` found for reference `&DemoRoles` in the current scope
  --> tests/ui/roles_no_raw_authority.rs:11:19
   |
11 |     let _ = roles.execution();
   |                   ^^^^^^^^^ method not found in `&DemoRoles`

error[E0599]: no method named `regular_order_sessions` found for reference `&DemoRoles` in the current scope
  --> tests/ui/roles_no_raw_authority.rs:12:19
   |
12 |     let _ = roles.regular_order_sessions();
   |                   ^^^^^^^^^^^^^^^^^^^^^^ method not found in `&DemoRoles`

error[E0599]: no method named `take_execution` found for reference `&DemoRoles` in the current scope
  --> tests/ui/roles_no_raw_authority.rs:13:19
   |
13 |     let _ = roles.take_execution();
   |                   ^^^^^^^^^^^^^^ method not found in `&DemoRoles`

error[E0599]: no method named `take_regular_order_sessions` found for reference `&DemoRoles` in the current scope
  --> tests/ui/roles_no_raw_authority.rs:14:19
   |
14 |     let _ = roles.take_regular_order_sessions();
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `&DemoRoles`

error[E0599]: no method named `credentials` found for reference `&LiveReadiness` in the current scope
  --> tests/ui/roles_no_raw_authority.rs:25:23
   |
25 |     let _ = readiness.credentials();
   |                       ^^^^^^^^^^^ method not found in `&LiveReadiness`

error[E0599]: no method named `signer` found for reference `&RegularReconciliation` in the current scope
  --> tests/ui/roles_no_raw_authority.rs:26:28
   |
26 |     let _ = reconciliation.signer();
   |                            ^^^^^^ method not found in `&RegularReconciliation`

error[E0599]: no method named `transport` found for reference `&LiveSafety` in the current scope
  --> tests/ui/roles_no_raw_authority.rs:27:20
   |
27 |     let _ = safety.transport();
   |                    ^^^^^^^^^
   |
help: there is a method `transform` with a similar name
   |
27 -     let _ = safety.transport();
27 +     let _ = safety.transform();
   |

error[E0599]: no method named `get` found for reference `&ForbiddenOrderObserver` in the current scope
  --> tests/ui/roles_no_raw_authority.rs:28:23
   |
28 |     let _ = forbidden.get("/api/v5/account/config");
   |                       ^^^ method not found in `&ForbiddenOrderObserver`

error[E0599]: no method named `post` found for reference `&PrivateStateSessionFactory` in the current scope
  --> tests/ui/roles_no_raw_authority.rs:29:27
   |
29 |     let _ = private_state.post("/api/v5/trade/order", "{}");
   |                           ^^^^ method not found in `&PrivateStateSessionFactory`

error[E0618]: expected function, found `BootstrapFactory`
  --> tests/ui/roles_no_raw_authority.rs:37:13
   |
30 |     let bootstrap = private_state
   |         --------- `bootstrap` has type `BootstrapFactory`
...
37 |     let _ = bootstrap(plan);
   |             ^^^^^^^^^------
   |             |
   |             call expression requires function

error[E0624]: method `generate` is private
  --> tests/ui/roles_no_raw_authority.rs:38:23
   |
38 |       let _ = bootstrap.generate(plan, "wss://wspap.okx.com:8443/ws/v5/private");
   |                         ^^^^^^^^ private method
   |
  ::: $WORKSPACE/crates/reap-feed/src/supervisor.rs
   |
   | /     fn generate(
   | |         &self,
   | |         plan: &SocketPlan,
   | |         selected_websocket_url: &str,
   | |     ) -> Result<Option<PrivateLoginBootstrap>, ConnectionError> {
   | |_______________________________________________________________- private method defined here
